// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter renders 0 1`] = `
Array [
  .c0 {
  -webkit-filter: 0;
  filter: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: 0;
  filter: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: 0;
  filter: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: 0;
  filter: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`filter renders function 1`] = `
Array [
  .c0 {
  -webkit-filter: hasnot;
  filter: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: has;
  filter: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: hasnot;
  filter: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: has;
  filter: has;
}

<div
    className="c0"
  />,
]
`;

exports[`filter renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-filter: invalid.path.1;
  filter: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: invalid.path.1;
  filter: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: invalid.path.1;
  filter: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: invalid.path.1;
  filter: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`filter renders negative number 1`] = `
Array [
  .c0 {
  -webkit-filter: -54881;
  filter: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: -54881;
  filter: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: -42365;
  filter: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: -42365;
  filter: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`filter renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-filter: July;
  filter: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: September;
    filter: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: July;
  filter: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: September;
    filter: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: January;
  filter: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: December;
    filter: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: April;
    filter: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: May;
    filter: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: June;
    filter: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: January;
  filter: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: December;
    filter: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: April;
    filter: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: May;
    filter: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: June;
    filter: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`filter renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-filter: July;
    filter: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: September;
    filter: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-filter: July;
    filter: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: September;
    filter: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: May;
    filter: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: June;
    filter: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: April;
    filter: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: May;
    filter: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: June;
    filter: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: April;
    filter: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`filter renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-filter: July;
  filter: July;
}

@media May {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media April {
  .c0 {
    -webkit-filter: September;
    filter: September;
  }
}

@media January {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

@media April {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media June {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: July;
  filter: July;
}

@media May {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media April {
  .c0 {
    -webkit-filter: September;
    filter: September;
  }
}

@media January {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

@media April {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media June {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: April;
  filter: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

@media April {
  .c0 {
    -webkit-filter: January;
    filter: January;
  }
}

@media January {
  .c0 {
    -webkit-filter: December;
    filter: December;
  }
}

@media April {
  .c0 {
    -webkit-filter: April;
    filter: April;
  }
}

@media June {
  .c0 {
    -webkit-filter: May;
    filter: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: April;
  filter: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

@media April {
  .c0 {
    -webkit-filter: January;
    filter: January;
  }
}

@media January {
  .c0 {
    -webkit-filter: December;
    filter: December;
  }
}

@media April {
  .c0 {
    -webkit-filter: April;
    filter: April;
  }
}

@media June {
  .c0 {
    -webkit-filter: May;
    filter: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`filter renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-filter: July;
    filter: July;
  }
}

@media April {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media January {
  .c0 {
    -webkit-filter: September;
    filter: September;
  }
}

@media April {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

@media June {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-filter: July;
    filter: July;
  }
}

@media April {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media January {
  .c0 {
    -webkit-filter: September;
    filter: September;
  }
}

@media April {
  .c0 {
    -webkit-filter: November;
    filter: November;
  }
}

@media June {
  .c0 {
    -webkit-filter: August;
    filter: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-filter: January;
    filter: January;
  }
}

@media April {
  .c0 {
    -webkit-filter: December;
    filter: December;
  }
}

@media January {
  .c0 {
    -webkit-filter: April;
    filter: April;
  }
}

@media April {
  .c0 {
    -webkit-filter: May;
    filter: May;
  }
}

@media June {
  .c0 {
    -webkit-filter: June;
    filter: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-filter: January;
    filter: January;
  }
}

@media April {
  .c0 {
    -webkit-filter: December;
    filter: December;
  }
}

@media January {
  .c0 {
    -webkit-filter: April;
    filter: April;
  }
}

@media April {
  .c0 {
    -webkit-filter: May;
    filter: May;
  }
}

@media June {
  .c0 {
    -webkit-filter: June;
    filter: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`filter renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-filter: 54881;
  filter: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: 54881;
  filter: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: 42365;
  filter: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: 42365;
  filter: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`filter renders string 1`] = `
Array [
  .c0 {
  -webkit-filter: July;
  filter: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: July;
  filter: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: June;
  filter: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: June;
  filter: June;
}

<div
    className="c0"
  />,
]
`;

exports[`filter renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`filter renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-filter: DarkSlateBlue;
  filter: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: DarkSlateBlue;
  filter: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: DarkSlateBlue;
  filter: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: DarkSlateBlue;
  filter: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
